--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -9,4 +9,16 @@ api_platform:
             jwt:
                 name: Authorization
                 type: header
+    http_cache:
+        invalidation:
+            enabled: false
+            
+        public: true
+    defaults:
+        cache_headers:
+            max_age: 1800
+            shared_max_age: 3600
+            vary: ['Content-Type', 'Authorization', 'Origin']
+
+
 
