--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -15,10 +15,14 @@ api_platform:
             
         public: true
     defaults:
+        pagination_client_enabled: true
+        pagination_items_per_page: 10
         cache_headers:
             max_age: 1800
             shared_max_age: 3600
             vary: ['Content-Type', 'Authorization', 'Origin']
-
+    collection:
+        pagination:
+            page_parameter_name: pagination
 
 
